@@ -1,5 +1,6 @@
 /************************************************************************
 **
+**  Copyright (C) 2018 Kevin B. Hendricks, Stratford, Ontario Canada
 **  Copyright (C) 2012 John Schember <john@nachtimwald.com>
 **  Copyright (C) 2009, 2010, 2011  Strahinja Markovic  <strahinja.markovic@gmail.com>
 **
@@ -75,6 +76,14 @@ private:
      *                   the required element type.
      */
     void ReadIdentifierElement(QXmlStreamReader *opf_reader);
+
+    /**
+     * Reads a metadata <link> element.
+     *
+     * @param opf_reader The OPF reader positioned to read
+     *                   the required element type.
+     */
+    void ReadMetadataLinkElement(QXmlStreamReader *opf_reader);
 
     /**
      * Reads a manifest <item> element.
