@@ -13,6 +13,7 @@ pre-0.9.11
     - update internal Python modules to use latest versions
     - give Windows users option to bypass the installation of VC runtime altogether during install
       (for rare situations where the bundled runtime seems to break previously installed versions)
+    - add support for internal but unmanifested opf metadata link resources under epub3
 
    Changes
     - Support for Windows Vista officially ends ... Win7sp1 is official minimum required Windows
